--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^12.4.7",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
