--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.4.7",
+    "npm-force-resolutions": "^0.0.10",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.0.0",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "react": "^18.0.0"
   }
 }
